--- a/views/admin/category.ejs
+++ b/views/admin/category.ejs
@@ -1,10 +1,13 @@
 <button id="addCategory">新增分类</button>
 <h2>分类列表</h2>
+<%= JSON.stringify(categoryList, 2, 2) %>
 <ul>
-    <li>1</li>
-    <li>1</li>
-    <li>1</li>
-    <li>1</li>
+        <% for (var i = 0; i < categoryList.length; i++) { %>
+            <li class="timeline-yellow">
+                    <%= categoryList[i].category_name %>
+                </div>
+            </li>
+            <% } %>
 </ul>
 
 <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
