--- a/views/admin/category.ejs
+++ b/views/admin/category.ejs
@@ -31,7 +31,7 @@
                     success: function (msg) {
                         console.log(msg);
                         if (msg.result) {
-                            alert('新增成功')
+                            location.reload();
                         } else {
                             alert('新增失败')
                         }
