--- a/views/admin/article-edit.ejs
+++ b/views/admin/article-edit.ejs
@@ -102,6 +102,7 @@
                     success: function (msg) {
                         console.log(msg);
                         if (msg.result) {
+                            alert('新增成功')
                         } else {
                             alert('新增失败')
                         }
