--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -1,51 +1,29 @@
-<!doctype html>
-<html>
-<head>
+<!DOCTYPE html>
+<html lang="zh-CN">
+  <head>
     <meta charset="utf-8">
-    <title>
-        <% if(typeof title !== 'undefined'){ %>
-        <%= title %>
-        <% } %>
-    </title>
-    <link rel="stylesheet" href="https://cdn.staticfile.org/semantic-ui/2.2.2/semantic.min.css">
-    <script src="https://cdn.staticfile.org/jquery/3.1.0/jquery.min.js"></script>
-    <script src="https://cdn.staticfile.org/semantic-ui/2.2.2/semantic.min.js"></script>
-    <style type="text/css">
-        .main.container {
-            margin-top: 7em;
-        }
-    </style>
-    <style type="text/css">
-        body {
-            background-color: #FFFFFF;
-        }
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
+    <title>Bootstrap 101 Template</title>
 
-        .ui.menu .item img.logo {
-            margin-right: 1.5em;
-        }
-    </style>
-</head>
-<body>
-<div class="ui fixed inverted main menu navbar" id="main_menu">
-    <div class="ui container">
-        <a href="/" class="header item">
-            <img class="logo" src="/images/logo.png">
-            MyBlog
-        </a>
-        <div class="right menu">
-            <a href="/" class="item">首页</a>
-            <% if ((typeof(session) !== 'undefined') && (typeof(session.admin) !== 'undefined')) { %>
-            <a href="/admin/logout" class="item">管理员登出</a>
-            <% } else { %>
-            <a href="/admin/login" class="item">管理员登录</a>
-            <% } %>
-        </div>
-    </div>
-</div>
-<div class="ui main container" style="margin-top: 70px;">
-    <div class="ui segment">
-        管理员
-    </div>
-</div>
-</body>
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- HTML5 shim 和 Respond.js 是为了让 IE8 支持 HTML5 元素和媒体查询（media queries）功能 -->
+    <!-- 警告：通过 file:// 协议（就是直接将 html 页面拖拽到浏览器中）访问页面时 Respond.js 不起作用 -->
+    <!--[if lt IE 9]>
+      <script src="https://cdn.jsdelivr.net/npm/html5shiv@3.7.3/dist/html5shiv.min.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/respond.js@1.4.2/dest/respond.min.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <% include header %>
+    <% include sidebar %>
+
+    <!-- jQuery (Bootstrap 的所有 JavaScript 插件都依赖 jQuery，所以必须放在前边) -->
+    <script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
+    <!-- 加载 Bootstrap 的所有 JavaScript 插件。你也可以根据需要只加载单个插件。 -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
+  </body>
 </html>
