--- a/views/admin/article-list.ejs
+++ b/views/admin/article-list.ejs
@@ -1,168 +1,140 @@
-<!DOCTYPE html>
-<html lang="zh-CN">
+<% include header %>
+<% include sidebar %>
+<div id="app-container">
+    <a href="/admin/article/edit">新增</a>
+    <table class="table table-bordered">
+        <thead>
+            <tr>
+                <th>#</th>
+                <th>title</th>
+            </tr>
+        </thead>
+        <tbody>
 
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
-    <title>Bootstrap 101 Template</title>
+            <% for (var i = 0; i < articles.length; i++) { %>
+            <tr>
+                <td scope="row">
+                    <%= i + 1  %>
+                </td>
+                <td>
+                    <%= articles[i].title %>
+                </td>
+            </tr>
+            <% } %>
 
-    <link href="/css/admin/common.css" rel="stylesheet">
-    <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
+        </tbody>
+    </table>
 
-    <!-- HTML5 shim 和 Respond.js 是为了让 IE8 支持 HTML5 元素和媒体查询（media queries）功能 -->
-    <!-- 警告：通过 file:// 协议（就是直接将 html 页面拖拽到浏览器中）访问页面时 Respond.js 不起作用 -->
-    <!--[if lt IE 9]>
-      <script src="https://cdn.jsdelivr.net/npm/html5shiv@3.7.3/dist/html5shiv.min.js"></script>
-      <script src="https://cdn.jsdelivr.net/npm/respond.js@1.4.2/dest/respond.min.js"></script>
-    <![endif]-->
-</head>
-
-<body>
-
-    <% include sidebar %>
-    <div id="app-container">
-        <table class="table table-bordered">
-            <thead>
-                <tr>
-                    <th>#</th>
-                    <th>title</th>
-                </tr>
-            </thead>
-            <tbody>
-
-                <% for (var i = 0; i < articles.length; i++) { %>
-                <tr>
-                    <td scope="row">
-                        <%= i + 1  %>
-                    </td>
-                    <td>
-                        <%= articles[i].title %>
-                    </td>
-                </tr>
-                <% } %>
-
-            </tbody>
-        </table>
-
-        <nav aria-label="Page navigation">
-            <ul class="pagination" id="pageLimit">
+    <nav aria-label="Page navigation">
+        <ul class="pagination" id="pageLimit">
 
 
-            </ul>
-        </nav>
+        </ul>
+    </nav>
 
 
-    </div>
+</div>
 
-    <!-- jQuery (Bootstrap 的所有 JavaScript 插件都依赖 jQuery，所以必须放在前边) -->
-    <script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
-    <!-- 加载 Bootstrap 的所有 JavaScript 插件。你也可以根据需要只加载单个插件。 -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.10/lodash.min.js"></script>
-    <script>
-        $(function () {
-            var pageSize = parseInt("<%= pageSize %>");
-            var pageNum = parseInt("<%= pageNum %>");
-            var count = parseInt("<%= count %>");
-            $('#pageLimit').bootstrapPaginator({
-                currentPage: pageNum,
-                totalPages: Math.ceil(count / pageSize),
-                size: "normal",
-                bootstrapMajorVersion: 3,
-                alignment: "right",
-                numberOfPages: 5,
-                itemTexts: function (type, page, current) {
-                    switch (type) {
-                        case "first":
-                            return "首页";
-                        case "prev":
-                            return "上一页";
-                        case "next":
-                            return "下一页";
-                        case "last":
-                            return "末页";
-                        case "page":
-                            return page;
+
+<script>
+    $(function () {
+        var pageSize = parseInt("<%= pageSize %>");
+        var pageNum = parseInt("<%= pageNum %>");
+        var count = parseInt("<%= count %>");
+        $('#pageLimit').bootstrapPaginator({
+            currentPage: pageNum,
+            totalPages: Math.ceil(count / pageSize),
+            size: "normal",
+            bootstrapMajorVersion: 3,
+            alignment: "right",
+            numberOfPages: 5,
+            itemTexts: function (type, page, current) {
+                switch (type) {
+                    case "first":
+                        return "首页";
+                    case "prev":
+                        return "上一页";
+                    case "next":
+                        return "下一页";
+                    case "last":
+                        return "末页";
+                    case "page":
+                        return page;
+                }
+            },
+            pageUrl: function (type, page, current) {
+                return "/admin/article/list?pagesize=5&pagenum=" + page;
+            }
+        });
+
+
+
+        // function getCategories () {
+        //     $.ajax({
+        //             url: '/categories/query',
+        //             type: 'get',
+        //             dataType: 'json',
+        //             data: {
+        //             },
+        //             success: function (msg) {
+        //                 console.log(msg);
+        //                 if (msg.result) {
+        //                     var categories = msg.categories;
+
+        //                     var partitionCategories = _.partition(categories, function(v) {
+        //                         return v.parent_id == 0
+        //                     });
+
+        //                     console.log('partitionCategories', partitionCategories)
+        //                     var firstCategories = partitionCategories[0];
+        //                     var otherCategories = partitionCategories[1];
+
+        //                     console.log('categories', categories)
+
+        //                     _.map(firstCategories, function(v) {
+        //                         v.children = [];
+        //                         return v;
+        //                     });
+        //                     // console.log('firstCategories', firstCategories)
+
+        //                 } else {
+        //                 }
+        //             },
+        //             error: function () {
+        //             }
+        //         })
+        // }
+
+        // getCategories();
+
+
+
+
+
+        $(".category-delete").bind('click', function () {
+            var categoryId = $(this).attr("data-categoryid");
+            $.ajax({
+                url: '/category/delete',
+                type: 'POST',
+                dataType: 'json',
+                data: {
+                    id: categoryId,
+                },
+                // processData: false,
+                // contentType: false,
+                success: function (msg) {
+                    console.log(msg);
+                    if (msg.result) {
+                        location.reload();
+                    } else {
+                        alert('删除失败')
                     }
                 },
-                pageUrl: function (type, page, current) {
-                    return "/admin/article/list?pagesize=5&pagenum=" + page;
+                error: function () {
+                    alert('删除异常');
                 }
-            });
-
-
-
-            // function getCategories () {
-            //     $.ajax({
-            //             url: '/categories/query',
-            //             type: 'get',
-            //             dataType: 'json',
-            //             data: {
-            //             },
-            //             success: function (msg) {
-            //                 console.log(msg);
-            //                 if (msg.result) {
-            //                     var categories = msg.categories;
-
-            //                     var partitionCategories = _.partition(categories, function(v) {
-            //                         return v.parent_id == 0
-            //                     });
-
-            //                     console.log('partitionCategories', partitionCategories)
-            //                     var firstCategories = partitionCategories[0];
-            //                     var otherCategories = partitionCategories[1];
-
-            //                     console.log('categories', categories)
-
-            //                     _.map(firstCategories, function(v) {
-            //                         v.children = [];
-            //                         return v;
-            //                     });
-            //                     // console.log('firstCategories', firstCategories)
-
-            //                 } else {
-            //                 }
-            //             },
-            //             error: function () {
-            //             }
-            //         })
-            // }
-
-            // getCategories();
-
-
-
-
-
-            $(".category-delete").bind('click', function () {
-                var categoryId = $(this).attr("data-categoryid");
-                $.ajax({
-                    url: '/category/delete',
-                    type: 'POST',
-                    dataType: 'json',
-                    data: {
-                        id: categoryId,
-                    },
-                    // processData: false,
-                    // contentType: false,
-                    success: function (msg) {
-                        console.log(msg);
-                        if (msg.result) {
-                            location.reload();
-                        } else {
-                            alert('删除失败')
-                        }
-                    },
-                    error: function () {
-                        alert('删除异常');
-                    }
-                })
-            });
-        })
-    </script>
-</body>
-
-</html>
+            })
+        });
+    })
+</script>
+<% include footer %>
