--- a/views/admin/sidebar.ejs
+++ b/views/admin/sidebar.ejs
@@ -1,7 +1,7 @@
 <aside id="app-sidebar">
 <ul class="nav nav-pills nav-stacked ">
     <li role="presentation" class="active"><a href="#">Home</a></li>
-    <li role="presentation"><a href="#">Profile</a></li>
-    <li role="presentation"><a href="#">Messages</a></li>
+    <li role="presentation"><a href="/admin/article/list?pagesize=10&pagenum=1">文章列表</a></li>
+    <li role="presentation"><a href="/admin/article/edit">文章新增</a></li>
 </ul>
 </aside>
