--- a/views/admin/sidebar.ejs
+++ b/views/admin/sidebar.ejs
@@ -3,5 +3,6 @@
     <li role="presentation" class="active"><a href="#">Home</a></li>
     <li role="presentation"><a href="/admin/article/list?pagesize=10&pagenum=1">文章列表</a></li>
     <li role="presentation"><a href="/admin/article/edit">文章新增</a></li>
+    <li role="presentation"><a href="/admin/category/list">分类列表</a></li>
 </ul>
 </aside>
