--- a/views/admin/content_add.html
+++ b/views/admin/content_add.html
@@ -1,4 +1,4 @@
-{% extends 'layout.html' %}
+{% extends "./admin/layout.html" %}
 {% block main%}
 <ol class="breadcrumb">
     <li><a href="/admin">管理首页</a></li>
