--- a/views/admin/category_add.html
+++ b/views/admin/category_add.html
@@ -1,4 +1,4 @@
-{% extends 'layout.html' %}
+{% extends "./admin/layout.html" %}
 {% block main%}
 <ol class="breadcrumb">
     <li><a href="/admin">管理首页</a></li>
@@ -8,7 +8,7 @@
     <div class="form-group">
         <label for="inputEmail3" class="col-sm-1 control-label">请输入分类名称</label>
         <div class="col-sm-11">
-            <input type="text" class="form-control" name="name" id="inputEmail3" placeholder="">
+            <input type="text" class="form-control" name="category_name" placeholder="">
         </div>
     </div>
     <div class="form-group">
