--- a/views/admin/category_edit.html
+++ b/views/admin/category_edit.html
@@ -1,14 +1,15 @@
-{% extends 'layout.html' %}
+{% extends "./admin/layout.html" %}
 {% block main%}
 <ol class="breadcrumb">
     <li><a href="/admin">管理首页</a></li>
+    <li><a href="/admin/category/list">分类列表</a></li>
     <li><span>分类编辑</span></li>
 </ol>
 <form class="form-horizontal" method="post">
     <div class="form-group">
         <label for="inputEmail3" class="col-sm-1 control-label">新分类名称</label>
         <div class="col-sm-11">
-            <input type="text" class="form-control" name="name" id="inputEmail3" value="{{category.name}}">
+            <input type="text" class="form-control" name="category_name" id="inputEmail3" value="{{category.category_name}}">
         </div>
     </div>
     <div class="form-group">
