--- a/views/admin/category_list.html
+++ b/views/admin/category_list.html
@@ -1,12 +1,10 @@
-{% extends "./layout.html" %}
+{% extends "./admin/layout.html" %}
 {% block main %}
 <ol class="breadcrumb">
     <li><a href="/admin">管理首页</a></li>
-    <li><span>分类首页</span></li>
+    <li><span>分类列表</span></li>
 </ol>
 <h3>分类列表</h3>
-
-{{ count }}
 <table class="table table-bordered table-hover">
     <tr>
         <th>ID</th>
@@ -15,11 +13,11 @@
     </tr>
     {% for category in categories %}
     <tr>
-        <td>{{category._id.toString()}}</td>
-        <td>{{category.name}}</td>
-        <td><a href="/admin/category/edit?id={{category._id.toString()}}">修改</a>|<a href="/admin/category/delete?id={{category._id.toString()}}">删除</a></td>
+        <td>{{category.id.toString()}}</td>
+        <td>{{category.category_name}}</td>
+        <td><a href="/admin/category/edit?id={{category.id.toString()}}">修改</a>|<a href="/admin/category/delete?id={{category.id.toString()}}">删除</a></td>
     </tr>
     {% endfor %}
 </table>
-{% include "page.html" %}
+{% include "./admin/page.html" %}
 {% endblock %}
