--- a/views/admin/layout.html
+++ b/views/admin/layout.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>后台管理</title>
-    <link rel="stylesheet" href="/public/css/bootstrap.css">
-    <link rel="stylesheet" href="/public/css/bootstrap-theme.css">
-    <script src="/public/js/jquery-3.2.0.js"></script>
-    <script src="/public/js/bootstrap.js"></script>
+    <link rel="stylesheet" href="/css/bootstrap.css">
+    <link rel="stylesheet" href="/css/bootstrap-theme.css">
+    <script src="/js/jquery-3.2.0.js"></script>
+    <script src="/js/bootstrap.js"></script>
 
 </head>
 <body>
@@ -25,14 +25,14 @@
                 <li class="dropdown">
                     <a href="/admin/category" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">分类管理 <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                    <li><a href="/admin/category">分类首页</a></li>
+                    <li><a href="/admin/category/list">分类列表</a></li>
                     <li><a href="/admin/category/add">分类添加</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
                     <a href="/admin/content" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">内容管理 <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="/admin/content">内容首页</a></li>
+                        <li><a href="/admin/content">内容列表</a></li>
                         <li><a href="/admin/content/add">内容添加</a></li>
                     </ul>
                 </li>
