--- a/views/admin/article_add.html
+++ b/views/admin/article_add.html
@@ -2,15 +2,15 @@
 {% block main%}
 <ol class="breadcrumb">
     <li><a href="/admin">管理首页</a></li>
-    <li><span>内容添加</span></li>
+    <li><span>文章添加</span></li>
 </ol>
 <form class="form-horizontal" method="post">
     <div class="form-group">
         <label for="category" class="col-sm-1 control-label">分类</label>
         <div class="col-sm-11">
-            <select name="category" id="category" class="form-control">
+            <select name="category_id" id="category" class="form-control">
                 {% for category in categories %}
-                <option value="{{category.id}}">{{category.name}}</option>
+                <option value="{{category.id}}">{{category.category_name}}</option>
                 {% endfor %}
             </select>
         </div>
@@ -21,12 +21,12 @@
             <input type="text" class="form-control" name="title" id="title" >
         </div>
     </div>
-    <div class="form-group">
+    <!-- <div class="form-group">
         <label for="description" class="col-sm-1 control-label">内容简介</label>
         <div class="col-sm-11">
             <textarea name="description" id="description" class="form-control"></textarea>
         </div>
-    </div>
+    </div> -->
     <div class="form-group">
         <label for="content" class="col-sm-1 control-label">内容</label>
         <div class="col-sm-11">
