--- a/views/admin/layout.html
+++ b/views/admin/layout.html
@@ -30,10 +30,10 @@
                     </ul>
                 </li>
                 <li class="dropdown">
-                    <a href="/admin/content" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">内容管理 <span class="caret"></span></a>
+                    <a href="/admin/content" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">文章管理 <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="/admin/content">内容列表</a></li>
-                        <li><a href="/admin/content/add">内容添加</a></li>
+                        <li><a href="/admin/article/list">文章列表</a></li>
+                        <li><a href="/admin/article/add">文章添加</a></li>
                     </ul>
                 </li>
             </ul>
