--- a/views/admin/article_edit.html
+++ b/views/admin/article_edit.html
@@ -2,18 +2,19 @@
 {% block main%}
 <ol class="breadcrumb">
     <li><a href="/admin">管理首页</a></li>
+    <li><a href="/admin/article/list">文章列表</a></li>
     <li><span>内容编辑</span></li>
 </ol>
 <form class="form-horizontal" method="post">
     <div class="form-group">
         <label for="category" class="col-sm-1 control-label">分类</label>
         <div class="col-sm-11">
-            <select name="category" id="category" class="form-control">
+            <select name="category_id" id="category_id" class="form-control">
                 {% for category in categories %}
-                {% if content.category._id.toString() == category._id.toString()%}
-                <option value="{{category.id}}" selected>{{category.name}}</option>
+                {% if article.category_id == category.id%}
+                <option value="{{category.id}}" selected>{{category.category_name}}</option>
                 {%else%}
-                <option value="{{category.id}}">{{category.name}}</option>
+                <option value="{{category.id}}">{{category.category_name}}</option>
                 {%endif%}
                 {% endfor %}
             </select>
@@ -22,19 +23,19 @@
     <div class="form-group">
         <label for="title" class="col-sm-1 control-label">内容标题</label>
         <div class="col-sm-11">
-            <input type="text" class="form-control" name="title" id="title" value="{{content.title}}">
+            <input type="text" class="form-control" name="title" id="title" value="{{article.title}}">
         </div>
     </div>
-    <div class="form-group">
+    <!-- <div class="form-group">
         <label for="description" class="col-sm-1 control-label">内容简介</label>
         <div class="col-sm-11">
-            <textarea name="description" id="description" class="form-control">{{content.description}}</textarea>
+            <textarea name="description" id="description" class="form-control">{{article.description}}</textarea>
         </div>
-    </div>
+    </div> -->
     <div class="form-group">
         <label for="content" class="col-sm-1 control-label">内容</label>
         <div class="col-sm-11">
-            <textarea name="content" id="content"  class="form-control" >{{content.content}}</textarea>
+            <textarea name="content" id="content"  class="form-control" >{{article.content}}</textarea>
         </div>
     </div>
     <div class="form-group">
