--- a/views/admin/layout.html
+++ b/views/admin/layout.html
@@ -32,8 +32,8 @@
                 <li class="dropdown">
                     <a href="/admin/content" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">文章管理 <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="/admin/article/list">文章列表</a></li>
-                        <li><a href="/admin/article/add">文章添加</a></li>
+                        <li><a href="/admin/post/list">文章列表</a></li>
+                        <li><a href="/admin/post/add">文章添加</a></li>
                     </ul>
                 </li>
             </ul>
