--- a/views/admin/post_edit.html
+++ b/views/admin/post_edit.html
@@ -2,7 +2,7 @@
 {% block main%}
 <ol class="breadcrumb">
     <li><a href="/admin">管理首页</a></li>
-    <li><a href="/admin/article/list">文章列表</a></li>
+    <li><a href="/admin/post/list">文章列表</a></li>
     <li><span>内容编辑</span></li>
 </ol>
 <form class="form-horizontal" method="post">
@@ -11,7 +11,7 @@
         <div class="col-sm-11">
             <select name="category_id" id="category_id" class="form-control">
                 {% for category in categories %}
-                {% if article.category_id == category.id%}
+                {% if post.category_id == category.id%}
                 <option value="{{category.id}}" selected>{{category.category_name}}</option>
                 {%else%}
                 <option value="{{category.id}}">{{category.category_name}}</option>
@@ -23,19 +23,19 @@
     <div class="form-group">
         <label for="title" class="col-sm-1 control-label">内容标题</label>
         <div class="col-sm-11">
-            <input type="text" class="form-control" name="title" id="title" value="{{article.title}}">
+            <input type="text" class="form-control" name="title" id="title" value="{{post.title}}">
         </div>
     </div>
     <!-- <div class="form-group">
         <label for="description" class="col-sm-1 control-label">内容简介</label>
         <div class="col-sm-11">
-            <textarea name="description" id="description" class="form-control">{{article.description}}</textarea>
+            <textarea name="description" id="description" class="form-control">{{post.description}}</textarea>
         </div>
     </div> -->
     <div class="form-group">
         <label for="content" class="col-sm-1 control-label">内容</label>
         <div class="col-sm-11">
-            <textarea name="content" id="content"  class="form-control" >{{article.content}}</textarea>
+            <textarea name="content" id="content"  class="form-control" >{{post.content}}</textarea>
         </div>
     </div>
     <div class="form-group">
