--- a/views/admin/post_list.html
+++ b/views/admin/post_list.html
@@ -19,16 +19,16 @@
    
    
 
-    {% for article in articles %}
+    {% for post in posts %}
     <tr>
-        <td>{{article.id}}</td>
-        <td>{{article.title}}</td>
-        <td>{{article.category.category_name}}</td>
+        <td>{{post.id}}</td>
+        <td>{{post.title}}</td>
+        <td>{{post.category.category_name}}</td>
         <td>作者</td>
-        <td>{{article.create_time}}</td>
-        {# <td>{{article.addTime|date('Y-m-d H:i:s',-8*60)}}</td> #}
-        <td>{{article.pv}}</td>
-        <td><a href="/admin/article/edit?id={{article.id}}">修改</a>|<a href="/admin/article/delete?id={{article.id}}">删除</a></td>
+        <td>{{post.create_time}}</td>
+        {# <td>{{post.addTime|date('Y-m-d H:i:s',-8*60)}}</td> #}
+        <td>{{post.pv}}</td>
+        <td><a href="/admin/post/edit?id={{post.id}}">修改</a>|<a href="/admin/post/delete?id={{post.id}}">删除</a></td>
     </tr>
     {% endfor %}
 </table>
