--- a/views/admin/layout.html
+++ b/views/admin/layout.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>后台管理</title>
-    <link rel="stylesheet" href="/css/bootstrap.css">
-    <link rel="stylesheet" href="/css/bootstrap-theme.css">
-    <script src="/js/jquery-3.2.0.js"></script>
-    <script src="/js/bootstrap.js"></script>
+    <link rel="stylesheet" href="/admin/css/bootstrap.css">
+    <link rel="stylesheet" href="/admin/css/bootstrap-theme.css">
+    <script src="/amdin/js/jquery-3.2.0.js"></script>
+    <script src="/ammin/js/bootstrap.js"></script>
 
 </head>
 <body>
