--- a/views/blog/base.html
+++ b/views/blog/base.html
@@ -8,8 +8,10 @@
     <meta name="keywords" content="" />
     <meta name="description" content="">
     <meta name="author" content="">
-    <link href="https://cdn.bootcss.com/bulma/0.7.1/css/bulma.min.css" rel="stylesheet">
-    <link href="https://cdn.bootcss.com/github-markdown-css/2.10.0/github-markdown.min.css" rel="stylesheet">
+    <link href="http://www.alloyteam.com/wp-content/themes/alloyteam/style.css" rel="stylesheet">
+
+    {# <link href="https://cdn.bootcss.com/bulma/0.7.1/css/bulma.min.css" rel="stylesheet"> #}
+    {# <link href="https://cdn.bootcss.com/github-markdown-css/2.10.0/github-markdown.min.css" rel="stylesheet"> #}
     <link rel="stylesheet" href="/blog/css/app.css">
 </head>
 <body>
@@ -17,7 +19,7 @@
     {% block body %}
     <div>No body</div>
     {% endblock %}
-    {% include "blog/components/footer.html" %}
+    {# {% include "blog/components/footer.html" %} #}
     <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
     {# <script>
         $(function(){
