--- a/views/blog/category.html
+++ b/views/blog/category.html
@@ -19,7 +19,7 @@
                         <td>{{category.name}}</td>
                         <td>{{category.title}}</td>
                         <td>
-                            <a href="/category/{{category._id}}/delete" class="button is-small is-danger">删除</a>
+                            <a href="/category/{{category.id}}/delete" class="button is-small is-danger">删除</a>
                         </td>
                     </tr>
                     {% endfor %}
