--- a/views/admin/layout.html
+++ b/views/admin/layout.html
@@ -5,8 +5,8 @@
     <title>后台管理</title>
     <link rel="stylesheet" href="/admin/css/bootstrap.css">
     <link rel="stylesheet" href="/admin/css/bootstrap-theme.css">
-    <script src="/amdin/js/jquery-3.2.0.js"></script>
-    <script src="/ammin/js/bootstrap.js"></script>
+    <script src="/admin/js/jquery-3.2.0.js"></script>
+    <script src="/admin/js/bootstrap.js"></script>
 
 </head>
 <body>
