--- a/views/blog/base.html
+++ b/views/blog/base.html
@@ -8,10 +8,14 @@
     <meta name="keywords" content="" />
     <meta name="description" content="">
     <meta name="author" content="">
-    <link href="http://www.alloyteam.com/wp-content/themes/alloyteam/style.css" rel="stylesheet">
+    <!-- <link href="http://www.alloyteam.com/wp-content/themes/alloyteam/style.css" rel="stylesheet"> -->
 
     {# <link href="https://cdn.bootcss.com/bulma/0.7.1/css/bulma.min.css" rel="stylesheet"> #}
     {# <link href="https://cdn.bootcss.com/github-markdown-css/2.10.0/github-markdown.min.css" rel="stylesheet"> #}
+    <link rel="stylesheet" href="https://www.deboy.cn/lib/fancybox/source/jquery.fancybox.css?v=2.1.5">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,300italic,400,400italic,700,700italic&subset=latin,latin-ext">
+    <link rel="stylesheet" href="https://www.deboy.cn/css/main.css?v=5.1.0">
+    <link rel="stylesheet" href="https://www.deboy.cn/lib/font-awesome/css/font-awesome.min.css?v=4.6.2">
     <link rel="stylesheet" href="/blog/css/app.css">
 </head>
 <body>
