--- a/views/blog/posts.html
+++ b/views/blog/posts.html
@@ -1,48 +1,101 @@
 {% extends 'blog/base.html' %}
 {% block body %}
 {# {% include "blog/components/header.html" %} #}
-<div id="main">
-   
-    <div id="content" role="main">
-        <ul class="articlemenu">
-                {% for post in posts %}
-            <li>
-                <a href="http://www.alloyteam.com/author/heyli/" class="test-loop animated tada" target="_blank"><img
-                        alt="TAT.heyli" src="http://www.alloyteam.com/wp-content/uploads/2015/04/lcxfs1991_avatar_1429622108.png"
-                        class="avatar avatar-43 photo" height="43" width="43"></a>
+<main id="main" class="main">
+    <div class="main-inner">
+        <div class="content-wrap">
+            <div id="content" class="content">
+                <section id="posts" class="posts-expand">
+                    {% for post in posts %}
+                    <article class="post post-type-normal" itemscope="" itemtype="http://schema.org/Article" style="opacity: 1; display: block; transform: translateY(0px);">
+                        <link itemprop="mainEntityOfPage" href="https://www.deboy.cn/interview-summary.html">
 
-                <a href="http://www.alloyteam.com/2018/09/13433/" class="blogTitle" rel="bookmark" target="_blank"
-                    title="小程序·云开发的云函数路由高级玩法">{{post.title}}</a>
-                <div class="blogPs"> In <a href="http://www.alloyteam.com/webdevelop/" rel="category tag">Web开发</a> on
-                    {{post.createdAt}} by <a href="http://www.alloyteam.com/author/heyli/" title="由TAT.heyli发布" rel="author">TAT.heyli</a>
-                    view: 689 </div>
-                <span class="comments"><a href="http://www.alloyteam.com/2018/09/13433/#respond" class="up">0</a></span>
+                        <span hidden="" itemprop="author" itemscope="" itemtype="http://schema.org/Person">
+                            <meta itemprop="name" content="Deboy">
+                            <meta itemprop="description" content="">
+                            <meta itemprop="image" content="/uploads/avatar.jpg">
+                        </span>
 
-                <!--content_banner-->
-                <div class="content_banner">
-
+                        <span hidden="" itemprop="publisher" itemscope="" itemtype="http://schema.org/Organization">
+                            <meta itemprop="name" content="Deboy's Blog">
+                        </span>
 
 
-                    <div class="text">
-                        <blockquote>
-                            <p>
-                                李成熙，腾讯高级工程师，专注于性能优化、工程化和小程序服务。<a href="https://weibo.com/leehkfs/">微博</a> | <a href="https://www.zhihu.com/people/leehey/">知乎</a>
-                                | <a href="https://github.com/lcxfs1991">Github</a>
-                            </p>
-                        </blockquote>
-                        <h2>概念回顾</h2>
-                        <p>在掘金开发者大会上，在推荐实践那里，我有提到一种云函数的用法，我们可以将相同的一些操作，比如用户管理、支付逻辑，按照业务的相似性，归类到一个云函数里，这样比较方便管理、排查问题以及逻辑的共享。甚至如果你的小程序的后台逻辑不复杂，请求量不是特别大，完全可以在云函数里面做一个单一的微服务，根据路由来处理任务。</p>
-                    </div>
-                </div>
-                <!--toolBar-->
-                <div class="toolBar">
-                    <p>
-                        <a href="http://www.alloyteam.com/2018/09/13433/" class="more">继续阅读</a>
-                    </p>
-                </div>
-            </li>
-            {% endfor %}
-        </ul>
+                        <header class="post-header">
+                            <h2 class="post-title" itemprop="name headline">
+
+                                <a class="post-title-link" href="/interview-summary.html" itemprop="url">
+                                    {{post.title}}
+                                </a>
+                            </h2>
+
+
+                            <div class="post-meta">
+                                <span class="post-time">
+                                    <span class="post-meta-item-icon">
+                                        <i class="fa fa-calendar-o"></i>
+                                    </span>
+                                    <span class="post-meta-item-text">发表于</span>
+                                    <time title="创建于" itemprop="dateCreated datePublished" datetime="2018-06-27T00:19:04+08:00">
+                                        2018-06-27
+                                    </time>
+                                </span>
+
+                                <span class="post-category">
+                                    <span class="post-meta-divider">|</span>
+                                    <span class="post-meta-item-icon">
+                                        <i class="fa fa-folder-o"></i>
+                                    </span>
+                                    <span class="post-meta-item-text">分类于</span>
+                                    <span itemprop="about" itemscope="" itemtype="http://schema.org/Thing">
+                                        <a href="/categories/WEB前端/" itemprop="url" rel="index">
+                                            <span itemprop="name">WEB前端</span>
+                                        </a>
+                                    </span>
+                                    ，
+                                    <span itemprop="about" itemscope="" itemtype="http://schema.org/Thing">
+                                        <a href="/categories/WEB前端/面试/" itemprop="url" rel="index">
+                                            <span itemprop="name">面试</span>
+                                        </a>
+                                    </span>
+                                </span>
+
+
+                                <span class="post-comments-count">
+                                    <span class="post-meta-divider">|</span>
+                                    <span class="post-meta-item-icon">
+                                        <i class="fa fa-comment-o"></i>
+                                    </span>
+                                    <a href="/interview-summary.html#comments" itemprop="discussionUrl">
+                                        <span class="post-comments-count disqus-comment-count" data-disqus-identifier="interview-summary.html"
+                                            itemprop="commentCount">0 Comments</span>
+                                    </a>
+                                </span>
+
+
+                            </div>
+                        </header>
+
+
+                        <div class="post-body" itemprop="articleBody">
+                            初衷除了自己给自己充电 还有给同样从事前端的朋友一点面试经验补充面试题目很多，我总结的是我前段时间面试遇到的比较经典的问题,
+                            面试样本有8家两家高级，其他初中级，高级侧重算法，初中级侧重框架使用的熟练程度和对源码的理解（理解层次看个人能力了）前端基础 + WEB安全 + 性能优化 是不分
+                            ...
+                            <div class="post-button text-center">
+                                <a class="btn" href="/interview-summary.html#more" rel="contents">
+                                    阅读全文 »
+                                </a>
+                            </div>
+                        </div>
+
+                        <footer class="post-footer">
+                            <div class="post-eof"></div>
+                        </footer>
+                    </article>
+                    {% endfor %}
+                </section>
+            </div>
+        </div>
     </div>
-</div>
+</main>
 {% endblock %}
