--- a/views/blog/posts.html
+++ b/views/blog/posts.html
@@ -5,6 +5,7 @@
     <div class="main-inner">
         <div class="content-wrap">
             <div id="content" class="content">
+
                 <section id="posts" class="posts-expand">
                     {% for post in posts %}
                     <article class="post post-type-normal" itemscope="" itemtype="http://schema.org/Article" style="opacity: 1; display: block; transform: translateY(0px);">
@@ -94,6 +95,10 @@
                     </article>
                     {% endfor %}
                 </section>
+
+                <nav class="pagination">
+                    <span class="page-number current">1</span><a class="page-number" href="/page/2/">2</a><span class="space">…</span><a class="page-number" href="/page/5/">5</a><a class="extend next" rel="next" href="/page/2/"><i class="fa fa-angle-right"></i></a>
+                </nav>
             </div>
         </div>
     </div>
